assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Raleway:wght@300&display=swap');

/* Base styling */

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Courgette', sans-serif;
    color: whitesmoke;
    background-color: rgb(114, 114, 114);
    margin: 0;
    padding: 0;
}

/* Header and Footer */

#logo {
    max-height: 96px;
}

header,
footer {
    background: linear-gradient(70deg, #5b3b71 20%, rgba(60, 60, 60, 0.9) 50%, #5b3b71 80%);
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    text-align: center;
}

header h1 {
    font-size: xxx-large;
    font-weight: 700;
    letter-spacing: 4px;
    margin: 0;
    padding-right: 1em;
}

/* navigation bar */

#navbar {
    padding-left: 20px;
}

#navbar>li {
    list-style-type: none;
    display: inline;
    margin-right: 8px;
}

#navbar a {
    text-decoration: none;
    color: whitesmoke;
}

#navbar .current {
    color: black;
}

#navbar a:hover {
    border: 2px solid black;
    padding: 4px;
}

/* Footer specific */ 

footer {
    flex-direction: column;
}

footer>div {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    text-align: center;
    padding-top: 1em;
}

footer a {
    text-decoration: none;
    color: whitesmoke;
}

footer i {
    font-size: 200%;
}

footer h3 {
    margin: 0.5em;
}

footer>div>div {
    background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(34, 34, 48, 1) 35%, rgba(17, 2, 25, 0.7987570028011204) 100%);
    border-radius: 4px;
    text-align: center;
    padding: 1.5em;
    width: 150px;
    height: 80px;
}

/* Hero Image */

#hero-image {
    background: url('../images/backbar.webp') repeat center center;
    background-size: cover;
    height: 300px;
    width: 100%;
}

/* Panel 1 and 2 */

.index-panel {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    padding: 1em;
}

.index-panel>div {
    text-align: center;
}

.index-panel img {
    max-height: 256px;
    max-width: 256px;
    margin: 0 auto;
}

.black-background {
    background-color: black;
}

.grey-background {
    background-color: rgb(170, 170, 170);
    color: black;
}

/* Panel 3 */

.index-panel3-background {
    background: url('../images/barbackground.jpg') no-repeat center center;
    background-size: cover;
    padding: 0;
    margin: 0;
    width: 100%;
}

#index-titlebox {
    padding-top: 2em;
}

#index-titlebox h2 {
    background: linear-gradient(77deg, rgba(17, 0, 36, 0.6951155462184874) 0%, rgba(109, 4, 237, 0.700717787114846) 50%, rgba(37, 11, 97, 0.7035189075630253) 100%);
    max-width: 33%;
    margin: 0 auto;
    padding: 1.5em;
    border-radius: 12px;
    font-size: 150%;
    text-align: center;
}

.index-panel3 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    width: 100%;
    align-items: flex-start;
    text-align: center;
    margin: 0 auto;
    gap: 5em;
    padding: 2em 0;
}

.index-panel3 i {
    font-size: xx-large;
}

.index-panel3 h3 {
    font-size: 140%;
}

.index-panel3 p {
    font-family: 'Raleway', sans-serif;
    font-weight: bold;
    padding: 4px;
}

.index-panel3>div {
    background: linear-gradient(77deg, rgba(17, 0, 36, 0.6951155462184874) 0%, rgba(109, 4, 237, 0.700717787114846) 50%, rgba(37, 11, 97, 0.7035189075630253) 100%);
    padding: 1.5em;
    border-radius: 12px;
}

.index-panel3 a {
    text-decoration: none;
    text-decoration: underline;
    color: white;
    font-size: 120%;
    font-style: italic;
    padding: 2px;
}

.index-panel3 a:hover {
    color: cyan;
}

/* Menu Page */

.menu-background {
    background: url('../images/backbar.jpg') no-repeat center center;
    backdrop-filter: blur(4px);
    background-size: cover;
    width: 100%;
}

.menu-container {
    background: linear-gradient(77deg, rgba(147, 71, 0, 0.9) 0%, rgba(79, 0, 0, .9) 50%, rgba(251, 65, 2, .9) 100%);
    display: grid;
    grid-template-columns: 3fr auto 1fr;
    grid-template-rows: auto;
    width: 100%;
    align-items: flex-start;
    text-align: center;
    margin: 0 auto;
    border: 2px solid black;
}

.menu-container>div {
    border-top: 2px solid black;
}

.menu-break {
    display: none;
}

.menu-cocktail {
    padding: 12px;
}

.menu-img,
.menu-price {
    padding: 12px 0;
    font-size: 150%;
}

.menu-img img {
    height: 140px;
    width: 100px;
}

.menu-break {
    background-color: rgba(0, 0, 0, .8);
    height: 100%;
}

/* What's On */

#whats-on-background {
    background: url('../images/purple-water.jpg') no-repeat;
    background-size: cover;
    width: 100%;
}

.whats-on-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    text-align: center;
}

.whats-on-container>div {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 1em;
    align-items: center;
    gap: 1em;
    justify-content: space-around;
    box-sizing: border-box;
}

.whatson-leftside>div {
    width: 100%;
    background: radial-gradient(circle, rgba(0, 0, 0, 0.9023984593837535) 0%, rgba(42, 42, 42, 0.896796218487395) 100%);
    padding: 1em;
}

.whatson-rightside>div {
    width: 100%;
    background: radial-gradient(circle, rgba(0, 0, 0, 0.9023984593837535) 0%, rgba(42, 42, 42, 0.896796218487395) 100%);
    padding: 1em;
}

.whats-on-container img {
    max-height: 256px;
    max-width: 100%;
}

#newsletter-container {
    height: 40rem;
}

#newsletter-form-image {
    background: url('../images/form-background-glass.jpg') no-repeat center;
    background-size: cover;
    height: 100%;
    max-width: 550px;
    margin: 0 auto;
}

#newsletter-form {
    font-family: 'Raleway', sans-serif;
    font-size: 1.5em;
    font-weight: bolder;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    width: 80%;
    height: 100%;
    justify-content: space-around;
}

#signup {
    padding: 12px;
    font-size: 1em;
    border: 5px ridge rgb(53, 52, 52);
}


/* Contact Us */

.contact-us-background {
    background: url('../images/contact-us-background-bar.jpg') no-repeat center center;
    background-size: cover;
    min-height: calc(100vh - 290px);
}

.contact-us-container {
    backdrop-filter: blur(3px);
    display: flex;
    flex-direction: column;
    padding: 1em;
    box-sizing: border-box;
    width: 100%;
    justify-content: space-evenly;
}

.contact-us-container>div {
    display: flex;
    flex-direction: column;
    gap: 1em;
    align-items: center;
}

.contact-tile {
    background: radial-gradient(circle, rgba(0, 0, 0, 0.9023984593837535) 0%, rgba(42, 42, 42, 0.896796218487395) 100%);
    border: 2px solid black;
    border-radius: 10px;
    width: 100%;
}

.contact-leftside iframe {
    width: 100%;
}

.contact-tile>div {
    background: linear-gradient(50deg, rgba(83, 83, 83, 0.6951155462184874) 0%, rgba(55, 49, 59, 0.700717787114846) 25%, rgba(51, 36, 57, 0.6951155462184874) 50%, rgba(83, 41, 93, 0.700717787114846) 75%, rgba(54, 8, 65, 0.700717787114846) 100%);
    width: 80%;
    text-align: center;
    margin: 0 auto;
}

.contact-tile h2 {
    padding-top: .2em;
    padding-bottom: .5em;
}

.contact-tile table {
    text-align: center;
    margin: 0 auto;
}

.contact-tile table td {
    padding: 0.2em 1em;
}

#opening-times {
    padding-bottom: 1em;
}

.contact-tile p {
    padding-bottom: 1em;
}

/* 404 page style */

#container-404 {
    background: radial-gradient(circle, rgba(0, 0, 0, 0.9023984593837535) 0%, rgba(42, 42, 42, 0.896796218487395) 100%);
}

#background-404 {
    background: url('../images/background-404.webp') no-repeat center;
    background-size: cover;
    min-height: calc(100vh - 290px);
    text-align: center;
    font-size: 200%;
}



/*media queries */

@media (min-width: 40rem) {

    #navbar li {
        margin-right: 24px;
    }

    .index-panel {
        flex-direction: row;
    }

    .index-panel img {
        max-width: 400px;
    }

    .index-panel>div {
        width: 50%;
    }

    .index-panel3 {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: minmax(150px, auto);
        width: 80%;
    }

    #hero-image {
        width: 150%;
        animation: animate 30s linear infinite;
    }

    @keyframes animate {
        0% {
            transform: translateX(0%);
        }

        100% {
            transform: translateX(-25%);
        }
    }

    .menu-container {
        background: linear-gradient(77deg, rgba(147, 71, 0, 0.7) 0%, rgba(79, 0, 0, .6) 50%, rgba(251, 65, 2, .6) 100%);
        grid-template-columns: 3fr auto 1fr .5fr 3fr auto 1fr;
        grid-template-rows: minmax(150px, auto);
    }

    .menu-break {
        display: initial;
    }

    .whats-on-container {
        flex-direction: row;
    }

    .whatson-leftside>div {
        max-width: 70%;
    }

    .whatson-rightside>div {
        width: 90%;
    }

    .contact-us-container {
        flex-direction: row;
    }

    .contact-leftside {
        width: 55%;
    }

    .contact-rightside {
        width: 40%;
    }
    #background-404 {
        background-size: contain;
    }
}

@media (min-width: 60rem) {
    .index-panel>div {
        width: 33%;
    }

    .whatson-leftside>div {
        max-width: 50%;
    }

    .contact-rightside {
        width: 30%;
    }

    .whatson-rightside>div {
        width: 70%;
    }

    .menu-container {
        width: 80%;
    }
}

